# system-installer

./: CMakeLists.txt  PKGBUILD  TODO  colorchooser.cpp  colorchooser.h  colorchooser.ui  colorizedlogo.ui  colorizedpixmap.cpp  colorizedpixmap.h  installationhandler.cpp  installationhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.kde.system-installer.desktop  resources.qrc  sudoers  system-installer-git.kdev4  system-installer.kdev4
data/: 40_custom  langpacks  timezones
images/: logo.xcf
install/: configurebootloader.cpp  configurebootloader.h  initcpio.cpp  initcpio.h  mountboot.cpp  mountboot.h  mountroot.cpp  mountroot.h  unsquash.cpp  unsquash.h
kauth/: authmount.cpp  authmount.h  org.kde.systeminstaller.actions
scripts/: 01-job-initialize-target.sh  02-job-configure-users.sh  03-job-configure-sudoers.sh  04-job-configure-pacman.sh  05-job-pre-remove.sh  06-job-pre-install.sh  07-job-setup-xorg.sh  08-job-download-l10n.sh  09-job-create-fstab.sh  10-job-add-extra-mountpoint.sh  11-job-setup-hardware.sh  12-job-create-initrd.sh  13-job-regenerate-locales.sh  14-job-create-localtime.sh  15-job-set-keymap.sh  16-job-set-hostname.sh  17-job-cleanup-l10n.sh  18-job-cleanup-drivers.sh  19-job-cleanup-etc.sh  20-job-install-grub2.sh  chroot-configure.sh  functions_helpers.sh  init.sh  install.sh  system-installer_colorize-color-scheme.sh  system-installer_colorize-icons.sh  tribe-installationhandler.cpp  tribe-installationhandler.h
